--- a/src/components/SearchBar/styles.scss
+++ b/src/components/SearchBar/styles.scss
@@ -26,7 +26,7 @@
   cursor: pointer;
 }
 
-.svg-inline--fa.fa-w-20 {
+.backspace-icon {
   position: absolute;
   top: 14px;
   right: 65px;
@@ -34,7 +34,7 @@
   color: #7ba7ab;
 }
 
-.svg-inline--fa.fa-w-16 {
+.search-icon {
   position: absolute;
   top: 14px;
   right: 12px;
