--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
+
 * {
   box-sizing: border-box;
-  margin: 0;
+  margin: 2px;
 }
 
 body {
-  margin: 0;
   background: linear-gradient(to right, #a3795f 50%, #012754);
 }
