--- a/src/components/MovieList/styles.scss
+++ b/src/components/MovieList/styles.scss
@@ -1,3 +1,21 @@
-.movie-row {
+.movies {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.movie {
+  margin: 8px;
+}
+
+.movie img {
+  height: 350px;
+  width: 260px;
+}
+
+.loading {
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+  margin-top: 100px;
 }
