--- a/src/components/SearchBar/styles.scss
+++ b/src/components/SearchBar/styles.scss
@@ -9,34 +9,20 @@
   height: 42px;
   padding-left: 10px;
   border: 2px solid #7ba7ab;
-  border-radius: 5px;
+  border-radius: 8px;
   outline: none;
-  color: #9e9c9c;
-}
-
-.search-bar button {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  width: 42px;
-  height: 42px;
-  border: none;
-  background:#7ba7ab;
-  border-radius: 0 5px 5px 0;
-  cursor: pointer;
+  font-weight: bold;
 }
 
 .backspace-icon {
   position: absolute;
   top: 14px;
-  right: 65px;
+  right: 26px;
   opacity: 0.5;
   color: #7ba7ab;
 }
 
-.search-icon {
-  position: absolute;
-  top: 14px;
-  right: 12px;
-  opacity: 0.5;
+.backspace-icon:hover {
+  cursor: pointer;
+  color: #57797d;
 }
