--- a/src/components/MovieList/styles.scss
+++ b/src/components/MovieList/styles.scss
@@ -13,11 +13,10 @@
   width: 260px;
 }
 
-.loading {
+.title {
   display: flex;
   justify-content: center;
+  color: #fff;
   font-size: 40px;
   margin-top: 100px;
 }
-
-
