Fix onClear logic & styles fix

--- a/src/components/HeaderTitle/styles.scss
+++ b/src/components/HeaderTitle/styles.scss
@@ -2,16 +2,13 @@
   height: 72px;
   margin-bottom: 30px;
   background-color: rgb(61, 66, 66);
-  border-bottom: 5px solid #1C6EA4;
+  border-bottom: 5px solid #1c6ea4;
   border-radius: 0px 0px 22px 22px;
 }
 
-.h1 {
+.title {
   display: flex;
   justify-content: center;
-}
-
-.h1Text {
   margin: 10px;
-  color: #1C6EA4;
+  color: #1c6ea4;
 }
